[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Interface/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Interface/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Interface/HealthBar.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Exo-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sprites/Interface/RightDirectionButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Interface/LeftDirectionButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Interface/AttackButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Interface/JumpButton.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Interface/Joystick/JoystickArea2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Interface/Joystick/JoystickAreaPressed2.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Interface/Joystick_button.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="HUD" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 1 )]

[node name="ExpInterface" parent="." instance=ExtResource( 1 )]
margin_left = -224.408
margin_right = -224.408

[node name="HealthBarAux" parent="ExpInterface" index="0"]
visible = false
max_value = 10.0
value = 0.0
tint_progress = Color( 0.0666667, 0.92549, 0.92549, 1 )

[node name="HealthBar" parent="ExpInterface" index="1"]
margin_left = -160.711
margin_right = -80.7107
margin_bottom = 20.0
max_value = 10.0
value = 0.0
texture_under = ExtResource( 3 )
tint_progress = Color( 0.890196, 0.858824, 0.117647, 1 )

[node name="CoinIcon" parent="ExpInterface" index="2"]
visible = false
frame = 2

[node name="CoinCount" parent="ExpInterface" index="3"]
margin_left = 238.824
margin_top = 22.0
margin_right = 300.824
margin_bottom = 45.0
text = "Level: 0"

[node name="ExpProgress" type="Label" parent="ExpInterface"]
margin_left = 250.258
margin_top = 11.676
margin_right = 290.258
margin_bottom = 19.676
custom_fonts/font = SubResource( 1 )
text = "0/9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTouchButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 52, 168 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 5 )
action = "Right"

[node name="LeftTouchButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 6, 168 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 6 )
action = "Left"

[node name="AttackButton" type="TouchScreenButton" parent="."]
position = Vector2( 360, 148 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 7 )
action = "Attack"

[node name="JumpButton" type="TouchScreenButton" parent="."]
position = Vector2( 360, 174 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 8 )
action = "Jump"

[node name="Joystick" type="Sprite" parent="."]
position = Vector2( 32, 160 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="Joystick_button" type="TouchScreenButton" parent="Joystick"]
position = Vector2( -10.6854, -8.78973 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
shape = SubResource( 2 )
script = ExtResource( 11 )

[editable path="ExpInterface"]
